Reformat code and remove unused methods/imports